<resources>
    <string name="app_name" translatable="false">Slab Warriors</string>
    <string name="baseurl" translatable="false">http://192.168.1.94:8000</string>
    <string name="play">Play</string>
    <string name="characters">Characters</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="password">Password</string>
    <string name="remember_password">Remember my password</string>
    <string name="displayed_name">Displayed name</string>
    <string name="profile_settings">Profile settings</string>
    <string name="signature_title">Your signature</string>
    <string name="email_on">Send me notifying emails about game updates, patches and news</string>
    <string name="email_off">Don\'t send me emails</string>
    <string name="action_settings">Account settings</string>
    <string name="login_empty">Username or password is empty</string>
    <string name="login_failed">Login failed</string>
    <string name="next">Select fighter</string>
    <string name="select_fighter">Choose a fighter from the list</string>
    <string name="other">Other settings</string>
    <string name="settings_title">Advanced</string>
    <string name="email_title">Email notification</string>
    <string name="token">Enable login with token</string>
    <string name="about">About us</string>
    <string name="fab_description">Help</string>
    <string name="choose">Choose a fighter</string>
    <string name="no_selected_fighter">No selected fighter</string>
    <string name="about_us">To the webpage</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Claim prize</string>
    <string name="win">Congratulations, You won!</string>
    <string name="lose">You\'ve lost, but you\'ll win next time!</string>
    <string name="cards">Cards</string>
    <string name="fighters">Fighters</string>
    <string name="enemies">Enemies</string>
    <string name="no_card">No card on the field</string>
    <string name="save">Save</string>
    <string name="earned">"Earned experience: "</string>
    <string name="xp">xp</string>
    <string name="level">", Level "</string>
    <string name="skip">Skip round</string>
    <string name="cards_left">"You can place this many cards: "</string>
    <string name="place_card">Place a card on the field</string>
    <string name="no_card_selected">No card selected</string>
    <string name="cant_attack">You can\'t attack the enemy</string>
    <string name="rules">How to play</string>
    <string name="you_sure">Are you sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="disappear">Make it disappear</string>
    <string name="rules_details">"You have the first turn in every match. \nOnly the cards placed on the field can attack the enemy, so you have to place them from your hand. \nIf the boss' hp drops to 0, you won. If your own fighter runs out of hp, you lose. \nWhat you can do in every round: you can place 3 cards, and after that you can attack with your fighter or cards. \nThe field has 6 slots where you can place your cards. \nYou cannot place more cards in a round than the limit or if you hadn't placed any cards at all. \nYou will still have the same amount of cards that you can place."</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email address</string>
    <string name="name">Username</string>
    <string name="log_or_reg">Login or register</string>
    <string name="log_out">Log out</string>
    <string name="login_invalid">Invalid username or password!</string>
    <string name="welcome">Welcome</string>
    <string name="fab_next">Next</string>
    <string name="back">Back</string>
    <string name="name_change">Cannot change username</string>
    <string name="passwordAgain">Password again</string>
    <string name="register_failed">Register unsuccessful</string>
    <string name="fill_fields">You have to fill all the fields</string>
    <string name="not_matching_passwords">Passwords are not matching</string>
    <string name="success">New user created successfully</string>
    <string name="already_attacked">You have already attacked with your fighter</string>
    <string name="how_to_play">"How to play\nYou have to put a card from your hand to the field.\nFirst you have to select a card:\n\ttap on the card to select it and tap on the field to place it there\n\tif you place a card on the enemy it will be attacked\n\tif you place the fighter on the enemy it will also be attacked.\nYou can only attack the enemy with your fielded cards and your fighter.\nThe cards you can place and the amount of times you can attack are limited in one round.\nYou have to tap the next button the get into the next round."</string>
    <string name="you_banned">You are banned and cannot log in.</string>
    <string name="register_already">Username or email is already in use</string>
</resources>