<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/accounts_title">
        <EditTextPreference
            android:defaultValue="false"
            android:key="name"
            android:selectAllOnFocus="true"
            android:singleLine="false"
            android:title="@string/name" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="password"
            android:title="@string/rememberPassword" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/other" >
        <SwitchPreferenceCompat
            app:key="other"
            app:title="@string/settings_title" />
        <SwitchPreferenceCompat
            app:dependency="other"
            app:key="attachment"
            app:summaryOff="@string/email_off"
            app:summaryOn="@string/email_on"
            app:title="@string/email_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="token"
            android:title="@string/token" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/about">
        <Preference
            android:key="about"
            app:title="@string/about">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>