<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RegisterActivity">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:layout_marginBottom="50dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="10dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="10dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="10dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordAgain"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="10dp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="18sp"
        android:textAllCaps="false"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="18sp"
        android:textAllCaps="false"/>
</androidx.appcompat.widget.LinearLayoutCompat>